--- a/arch/arm64/crypto/Makefile
+++ b/arch/arm64/crypto/Makefile
@@ -18,12 +18,12 @@ obj-$(CONFIG_CRYPTO_GHASH_ARM64_CE) += ghash-ce.o
 ghash-ce-y := ghash-ce-glue.o ghash-ce-core.o
 
 obj-$(CONFIG_CRYPTO_AES_ARM64_CE) += aes-ce-cipher.o
-aes-ce-cipher-y := aes-ce-cipher-glue.o aes-ce-cipher-core.o
+aes-ce-cipher-y := aes-ce-core.o aes-ce-glue.o
 
 ifeq ($(filter -mcpu=%, $(MACH_CFLAGS)),)
-CFLAGS_aes-ce-cipher-core.o += -march=armv8-a+crypto -Wa,-march=armv8-a+crypto
+CFLAGS_aes-ce-core.o += -march=armv8-a+crypto -Wa,-march=armv8-a+crypto
 endif
-CFLAGS_aes-ce-cipher-core.o += $(DISABLE_LTO)
+CFLAGS_aes-ce-core.o += $(DISABLE_LTO)
 
 obj-$(CONFIG_CRYPTO_AES_ARM64_CE_CCM) += aes-ce-ccm.o
 aes-ce-ccm-y := aes-ce-ccm-glue.o aes-ce-ccm-core.o
